--- a/ssaddu-master/mystyle.css
+++ b/ssaddu-master/mystyle.css
@@ -1,7 +1,6 @@
-<style media "screen">
 .grid{
   display: grid;
-  grid-template-columns: 150px 1fr;
+  grid-template-columns: 200px 1fr;
   border: 1px solid gray;
 }
 .navigation{
@@ -22,15 +21,14 @@ a{
    border-bottom: none;
  }
 }
-h1{
- color:dodgerblue;
- text-align: center;
-}
+
 h2{
   font-size: 4em;
   text-align: center;
 }
-h3{
-  color:deepskyblue;
+body{
+  background-color:  rgb(255,255,204);
 }
-</style>
+h4{
+  font-size: 30px;
+}
